--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Microdata Citation Explorer project
-description: Description of "Automating Microdata Citation Detection". a project completed with the World Bank-UNHCR Joint Data Center on Forced Displacement
+title: Projects by Mureji Fatunde
+description: This page hosts some of the projects completed by Mureji in the course of her professional or personal work.
