--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Projects by Mureji Fatunde
-description: This page hosts some of the projects completed by Mureji in the course of her professional or personal work.
+description: This page hosts some of the projects completed by Mureji in the course of her professional and personal work.
